--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ coverage.xml
 .pytest_cache/
 
 # Translations
-*.mo
+# *.mo
 *.pot
 
 # Django stuff:
@@ -116,4 +116,4 @@ dmypy.json
 
 # otras carpetas
 Entregas/
-Datos/
+# Datos/
